--- a/index.html
+++ b/index.html
@@ -6,132 +6,147 @@
 	<title>Wiki</title>
 	<link rel="stylesheet" href="">
 	<link rel="stylesheet" type="text/css" href="Style.css"/>
+	<link href="https://fonts.googleapis.com/css?family=Dancing+Script" rel="stylesheet"><!--fontfamily footer-->
+	<link href="https://fonts.googleapis.com/css?family=Lobster" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
 </head>
 <body>
 	<header>
 		<nav class="menu">
 			<ul>
-				<li><a href="#">Inicio</a></li>
-				<li><a href="#">Tutoriales</a>
+				<li><a href="#inicio">Inicio</a></li>
+				<li><a href="#">PROXMOX</a>
 					<ul>
-						<li><a href="#">1.-Instalación Proxmox</a></li>
-						<li><a href="#">2.-Configuracioó Proxmox</a></li>
+						<li><a href="#proxmoxInstalacion">Instalación</a></li>
+						<li><a href="#proxmoConfiguracion">Configuracion</a></li>
+						<li><a href="#proxmoxPlantilla">Virtualización</a></li>
+						<li><a href="#proxmoxVirtualizacion">Plantilla</a></li>
 					</ul>
 				</li>
-				<li><a href="#">Otros</a></li>
+				<li><a href="#apache">Apache</a>
+					<ul>
+						<li><a href="#">Instalación</a></li>
+						<li><a href="#">Configuracion</a></li>
+					</ul>
+				</li>
+				<li><a href="#git/hub">git / Git-Hub</a>
+					<ul>
+						<li><a href="#">Instalación</a></li>
+						<li><a href="#">Configuracion</a></li>
+					</ul>
+				</li>
 			</ul>
 		</nav>
+		<div class="media">
+			<img src="img/logo.gif" width="100" height="100">
+		</div>
 	</header>
 	<section>
-		<aside>
-			<h1>aside</h1>
-			Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-			tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-			quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-			consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-			cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-			proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-		</aside>
-		<article>
-			<h1>article</h1>
-			Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-			tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-			quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-			consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-			cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-			proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-			Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-			tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-			quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-			consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-			cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-			proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-			Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-			tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-			quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-			consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-			cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-			proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-			Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-			tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-			quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-			consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-			cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-			proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-			Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-			tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-			quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-			consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-			cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-			proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-			Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-			tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-			quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-			consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-			cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-			proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-			Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-			tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-			quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-			consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-			cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-			proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-			Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-			tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-			quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-			consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-			cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-			proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-			Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-			tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-			quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-			consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-			cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-			proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-			Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-			tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-			quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-			consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-			cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-			proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-			Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-			tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-			quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-			consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-			cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-			proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-			Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-			tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-			quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-			consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-			cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-			proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-			Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-			tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-			quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-			consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-			cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-			proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-			Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-			tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-			quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-			consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-			cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-			proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-		</article>
-	</section>
-	<footer>
+		<!--<aside>
+			<br>
+			<h1>Menu</h1>
+			<br>
+			<table class="tablaMenu"; cellspacing="50";>
+				<tbody>
+					<tr>
+						<td><a href="#inicio">INICIO</a></td>
+					</tr>
+					<tr>
+						<td><a href="#proxmoxVirtualizacion">VIRTUALIZACIÓN</a></td>
+					</tr>
+					<tr>
+						<td><a href="#">CONTACTO</a></td>
+					</tr>
+					<tr>
+						<td><a href="#">APACHE</a></td>
+					</tr>
+					<tr>
+						<td><a href="#">GIT / GIT-HUB</a></td>
+					</tr>
+					<tr>
+						<td><a href="#contacto">CONTACTO</a></td>
+					</tr>
+					
+				</tbody>
+			</table>
+		</aside>-->
+		<article class="scrollable">
+			<div>
+			<img id="inicio" class="titulo" src="img/proxmox-logo.png">
+			<br>
+			<p>
+			<br><h4>Inicio</h4><br>
+			Proxmox Virtual Environment es una solución completa de virtualización, que funciona sobre Debian GNU/Linux, permitiendo la creación y gestion de máquinas virtuales como OpenVZ o KVM.<br><br>
+			Sus principales caracteristicas son:<br>
+			1. <b>Software Libre: </b>Acceso completo al código, creación de ramas paralelas, etc.<br>
+			2.<b>Funciona sobre Debian GNU/Linux: </b>Al ser Debian tan estable, se limitan los problemas debidos al SO.<br>
+			3.<b>Soporte OpenVZ: </b>Permite crear contenedores de paravirtualización, de alto rendimiento, pero más dependientes del SO anfitrión.<br>
+			4.<b>Soporte KVM: </b>Permite crear máquinas virtuales KVM, completamente independientes del SO anfitrión, que pueden tener su propio kernel, cortafuegos, etc.<br>
+			5.<b>Software vivo: </b>Las actualizaciones de Proxmox son constantes, tanto para la solución de errores, como añadir nuevas caracteristicas.<br>
+			6.<b>Interfaz web de gestión: </b>Simplifica y facilita el trabajo, evitando usar la consola de comandos.<br>
+			7.<b>API remota: </b>Permite acceso remoto usando cualquier lenguaje de programació a todas las funciones.<br>
+			8.<b>Migración en vivo: </b>Permite mover una máquina virtual entre servidores físicos sin caídas de servicio.<br>
+			9.<b>Cluster: </b>Permite crear clusters de servidores para entornos profesionales.<br>
+			10.<b>Alta Disponibilidad:</b> Ofrece características de alta disponibilidad , permitiendo migrar máquinas de nodo con un par de clicks de ratón.<br>
+			<br><h4 id="proxmoxInstalacion">Instalación </h4><br>
+			Lo primero de todo utilizaremos la opción mas sencilla que es, utilizar un USB booteable.<br>
+			Para ello nos descargaremos la ISO de Proxmox, <a href="https://www.proxmox.com/en/downloads">aqui.</a><br>
+			Cuando hayais descargado la ISO y lo habeis añadido al USB solo faltaria introducir el USB en el micro servidor.<br>
+			En el proceso de la instalación  nos pedira una contraseña y nos pedira introducirla de nuevo para confirmarla para acceder al servidor y un mail.<br><br>
+			<img class="imagenTexto" src="img/001.png"><br><br>
+			<h4 id="proxmoConfiguracion">Configuración </h4><br>
+			Por ultimo tendremos que añadir la configuración para el servidor que sera lo siguiente.<br>
+			IP->Numero de identificación una red de un dispositivo.<br>
+			Mascara->Es una combinación de bits que indican que parte corresponde a subred y que parte al hots.<br>
+			Puerta de Enlace->Es un sistema de la red que permite acceder a otra red.<br>
+			DNS->Es un sistema de dominios para alojar una web u otrs servicios asociados.<br>
+			Al poner todos estos datos le daremos a NEXT y el PROXMOX terminara de instalarse.<br><br>
+			<img class="imagenTexto" src="img/002.png"><br><br>
+			Después de la instalación se reiniciará el servidor y podremos entrar en lo que es la ventana de comandos de proxmo que no utilizaremos.<br>
+			Ahora vamos a un equipo y pondremos la IP fisica que le hemos dado a nuestro servidor: 'https://"IP":8006' al introducir en la URL nos sandra la siguiente ventana:<br>
+			<img class="imagenTexto" src="img/003.png"><br><br>
+			<img class="imagenTexto" src="img/004.png"><br><br>
+			<h4 id="proxmoxVirtualizacion">Virtualización</h4><br>
+			Ya con el servidor de Proxmox instalado, toca decidir entre 'Maquinas Virtuales' o 'Contenedores'.<br><br>
+			<h4>Maquinas Virtuales</h4><br>
+			Hay varias razones de utilizar MV, una de ellas es que quieras instalar un sistema operativos de windows, otra trata de querer flexibilidad y ejecutar multiples aplicaciones, y por ultimo es que te preocupa la seguridad y una MV te proporciona muchisima seguridad comparada con un contendor.<br><br>
 
-	<div class="footer">
-		<!--<h5>Contacto: Correo_electronico@gmail.com</h5>-->
-	</div>
-	<div class="footer">
-		<!--<h5>Contacto: Correo_electronico@gmail.com</h5>-->
-	</div>
-	<div class="footer">
-		<h5 class="txtfooter">Contacto: Correo_electronico@gmail.com</h5>
-	</div>
-	
+			<h4 id="proxmoxPlantilla">Plantilla</h4><br>
+			
+			Para utilizar los contenedores tendre que instalar dentro de ellos las plantillas corespondientes al SO que deseeamos.<br>
+			Para descargar la plantilla nos iremos a local --> Content --> Templates, y seleccionaremos la plantilla que deseamos.<br><br>
+			<img class="imagenTexto" src="img/005.png"><br><br>
+			Una vez descargada la plantilla que deseamos, procederemos a la instalacion del contenedor en el que tendremos que asignarle datos como:<br>
+			Contraseña de acceso, IP, Mascara, DNS.<br><br>
+			<img class="imagenTexto" src="img/006.png"><br><br>
+			<img class="imagenTexto" src="img/007.png"><br><br>
+			<img class="imagenTexto" src="img/008.png"><br><br>
+			<img class="imagenTexto" src="img/009.png"><br><br>
+			Una vez instalada la plantilla como Contenedor en proxmox lo iniciamos y nos aparece un resumen y un apartado de consola para controlar instalaciones y configuraciones del server linux.<br><br>
+			<img class="imagenTexto" src="img/010.png"><br><br>
+			</p>
+			</div>
+			<h4>APACHE</h4>
+			<h4>GIT /GIT-HUB</h4>
+			<h4 id="contacto">CONTACTO</h4>
+		</article>
+		
+	</section>
+	<footer id="footer">
+
+		<div class="footer">
+			<h5 class="txtfooter">Copyright © 2004 - 2017</h5>
+		</div>
+		<div class="footer">
+			<h5 class="txtfooter">Todos los derechos reservados</h5>
+		</div>
+		<div class="footer">
+			<h5 class="txtfooter"><a href="legalNotice.html">Politica de Privacidad</a></h5>
+		</div>
+		<div class="footer">
+			<h5 class="txtfooter"><a href="sitemap.html">Mapa del Sitio</a></h5>
+		</div>
+
 	</footer>
 </body>
 </html>
